# prodo

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  output.ical  requirements.txt
base/: config.py  models.py
docker/: entrypoint.sh
etc/init.d/: prodo
etc/nginx/: nginx.conf
etc/prodo/: config.env  config.toml
ical/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
ical/migrations/: 0001_initial.py
migrations/2024-05-25-150723_create_persons/: up.sql
migrations/2024-05-31-191554_create_tasks/: up.sql
migrations/2024-06-01-123637_create_lists/: up.sql
migrations/2024-06-02-111748_create_calendar_subscription/: down.sql  up.sql
migrations/2024-06-03-205619_add_task_rrule/: down.sql  up.sql
migrations/2024-07-14-162005_add_calendar_subscription_timezone/: down.sql  up.sql
migrations/2024-08-04-220354_add_lists_is_archived/: down.sql  up.sql
migrations/2024-08-05-115200_add_tasks_is_archived/: down.sql  up.sql
migrations/2024-08-05-145847_add_calendar_subscription_sync_datetime/: down.sql  up.sql
prodo/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: bump_version.sh  install.sh  update_manifest.sh
src/: bootstrap.rs  error.rs  main.rs  schema.rs
src/api/: mod.rs
src/infrastructure/: cli.rs  cron.rs  mod.rs
src/services/: calendar.rs  person.rs  task.rs
src/utils/: time.rs
static/: global.css
tasks/: admin.py  cron.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_completed.py  0003_alter_task_description.py  0004_tasklist.py  0005_alter_tasklist_user.py  0006_alter_tasklist_ordered_tasks.py  0007_alter_tasklist_ordered_tasks.py  0008_alter_task_summary.py  0009_task_priority_task_score.py  0011_alter_task_urgency.py  (+1 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
webapp/: .eslintrc.cjs  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  quasar.config.js  tsconfig.json
webapp/src/: App.vue
(+84 files in other folders)
