[package]
name = "prodo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-identity = "0.7.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.6.0"
argon2 = "0.5.3"
async-trait = "0.1.80"
clap = { version = "4.5.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["chrono", "postgres", "r2d2", "uuid"] }
log = "0.4.21"
r2d2 = "0.8.10"
rpassword = "7.3.1"
serde = "1.0.202"
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
rand = { version = "0.8.5", features = [] }
