[package]
name = "prodo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-identity = "0.7.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.6.0"
argon2 = "0.5.3"
async-trait = "0.1.80"
clap = { version = "4.5.0", features = ["derive"] }
diesel = { version = "2.2.0", features = ["chrono", "postgres", "r2d2", "uuid"] }
log = "0.4.21"
r2d2 = "0.8.10"
rpassword = "7.3.1"
serde = "1.0.202"
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.9.0", features = ["serde"] }
rand = { version = "0.8.5", features = [] }
rrule = { version = "0.12.0", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
actix-files = "0.6.5"
diesel_migrations = "2.2.0"
icalendar = { version = "0.16.2", features = ["chrono-tz"] }
